call predict on apy
