# apy/static/swagger/swagger.json
@@ -7,7 +7,7 @@
   "host": "127.0.0.1:5555",
   "schemes": ["http", "https"],
   "consumes": ["application/json", "multipart/form-data"],
-  "produces": ["application/json", "text/plain"],
+  "produces": ["application/json", "text/plain", "text/html", "multipart/form-data"],
   "paths": {
     "/": {
       "get": {
@@ -39,7 +39,7 @@
       "post": {
         "description": "Predict an image",
         "consumes": ["multipart/form-data"],
-        "produces": ["application/json"],
+        "produces": ["multipart/form-data"],
         "parameters": [
           {
             "in": "header",
@@ -79,16 +79,30 @@
         ],
         "responses": {
           "200": {
-            "description": "User granted access"
+            "description": "Result which category image belongs to",
+            "schema": {
+              "$ref": "#/definitions/Prediction_Response"
+            }
           },
-          "400": {
-            "description": "Invalid request data"
+          "500": {
+            "description": "Invalid request data!"
           }
         }
       }
     }
   },
   "definitions": {
-
+    "Prediction_Response": {
+      "type": "object",
+      "properties": {
+        "top_categories": {
+          "type": "object"
+        },
+        "figure": {
+          "type": "string",
+          "format": "binary"
+        }
+      }
+    }
   }
 }
